added more visuals to pngs across my code

--- a/data/XGBoost.ipynb
+++ b/data/XGBoost.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "id": "f86859df-19cc-4137-80d3-67d9947e8639",
    "metadata": {},
    "outputs": [
@@ -246,6 +246,7 @@
     "plt.xlabel(\"Actual SalePrice\")\n",
     "plt.ylabel(\"Residuals\")\n",
     "plt.title(\"Residual Plot for Tuned XGBoost\")\n",
+    "plt.savefig(\"xgboostresiduals.png\")  # Save as PNG\n",
     "plt.show()\n"
    ]
   },
@@ -712,9 +713,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "id": "62b50ffb-7cae-4232-a230-7ef738c9916f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -742,15 +745,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -771,11 +765,9 @@
     "plt.ylabel(\"Feature\")\n",
     "plt.title(\"Feature Importance in XGBoost\")\n",
     "plt.gca().invert_yaxis()\n",
-    "plt.show()\n",
-    "\n",
-    "# Save the plot as a PNG\n",
     "plt.savefig(\"xgboost_feature_importance.png\", dpi=300)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
